--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.4.1",
+    "sweetalert2": "^11.17.2",
     "three": "^0.175.0"
   },
   "devDependencies": {
