--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.8.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
