--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
