Fix: Move sequelize-cli to dependencies and use npx for Render deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,9 @@
     "dev": "nodemon src/app.js",
     "build": "npm install && npm run db:migrate",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db:migrate": "sequelize db:migrate",
-    "db:migrate:undo": "sequelize db:migrate:undo",
-    "db:migrate:undo:all": "sequelize db:migrate:undo:all"
+    "db:migrate": "npx sequelize db:migrate",
+    "db:migrate:undo": "npx sequelize db:migrate:undo",
+    "db:migrate:undo:all": "npx sequelize db:migrate:undo:all"
   },
   "keywords": [
     "parking",
@@ -33,10 +33,10 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.3",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.3"
+    "nodemon": "^3.0.1"
   }
 }
