--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "build": "npm install && npm run db:migrate",
+    "build:safe": "npm install && (npm run db:migrate || echo 'Migration failed, but continuing...')",
     "test": "echo \"Error: no test specified\" && exit 1",
     "db:migrate": "npx sequelize db:migrate",
     "db:migrate:undo": "npx sequelize db:migrate:undo",
