Update CORS configuration for deployed Vercel frontend URL

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@
 # Server
 PORT=10000
 NODE_ENV=production
-CORS_ORIGIN=https://your-frontend-domain.com
+CORS_ORIGIN=https://find-my-spot-lac.vercel.app
 JWT_SECRET=replace-with-a-long-random-string
 
 # Database (MySQL on Railway)
