--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,12 +2,12 @@
 # Copy this file to .env and adjust values
 
 # Server
-PORT=10000
+PORT=4000
 NODE_ENV=production
-CORS_ORIGIN=https://find-my-spot-lac.vercel.app
+CORS_ORIGIN=https://find-my-spot-lac.vercel.app,http://localhost:5173
 JWT_SECRET=replace-with-a-long-random-string
 
-# Database (MySQL on Railway)
+# Database (MySQL on Railway) - production
 DB_DIALECT=mysql
 DB_HOST=your-railway-mysql-host
 DB_PORT=3306
@@ -15,8 +15,8 @@ DB_USER=root
 DB_PASSWORD=yourpassword
 DB_NAME=railway
 # Railway MySQL URL (if available, overrides the above)
-MYSQL_URL=mysql://root:password@host:port/railway
-DATABASE_URL=mysql://root:password@host:port/railway
+MYSQL_URL=
+DATABASE_URL=
 DB_SSL=true
 DB_POOL_MAX=15
 
@@ -24,6 +24,8 @@ DB_POOL_MAX=15
 RATE_LIMIT_WINDOW_MS=60000
 RATE_LIMIT_MAX=120
 
-# OR use SQLite locally for development (comment MySQL vars above if using SQLite)
+# Development (SQLite) example - uncomment for local dev without MySQL
+# NODE_ENV=development
 # DB_DIALECT=sqlite
 # DB_STORAGE=database.sqlite
+# (When using SQLite, leave MYSQL_URL / DATABASE_URL blank)
