Chore: update legacy apiClient fallback and env example to production API

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@
 # Copy to .env or .env.production and adjust
 
 # Base API URL (include /api if backend is served under /api)
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://findmyspot-grxt.onrender.com/api
