--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,11 @@
 # Server
 PORT=4000
 NODE_ENV=production
-CORS_ORIGIN=https://find-my-spot-lac.vercel.app,http://localhost:5173
+# CORS_ORIGIN accepts:
+# - Comma separated exact origins
+# - '*' to allow all (not recommended for production)
+# - Wildcard subdomains using *.domain.tld (e.g. *.vercel.app)
+CORS_ORIGIN=https://find-my-spot-tau.vercel.app,https://find-my-spot-lac.vercel.app,http://localhost:5173,*.vercel.app
 JWT_SECRET=replace-with-a-long-random-string
 
 # Database (MySQL on Railway) - production
