feat(admin-auth): add backend admin login, enforce admin roles, refactor admin frontend for JWT auth

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -33,3 +33,7 @@ RATE_LIMIT_MAX=120
 # DB_DIALECT=sqlite
 # DB_STORAGE=database.sqlite
 # (When using SQLite, leave MYSQL_URL / DATABASE_URL blank)
+
+# Admin credentials (used by /auth/admin/login). Change in production.
+ADMIN_USERNAME=changeme_admin
+ADMIN_PASSWORD=changeme_password
